// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add bay card render tests renders the bottom sheet add bay, not visible 1`] = `null`;

exports[`Add bay card render tests renders the bottom sheet add bay, visible, manager and non manager option 1`] = `
<BottomSheetBaseCard
  image=""
  onPress={[Function]}
  text="add bay"
/>
`;

exports[`Add bay card render tests renders the bottom sheet add card, not visible 1`] = `null`;

exports[`Add bay card render tests renders the bottom sheet add card, visible, manager option 1`] = `
<BottomSheetBaseCard
  image=""
  onPress={[Function]}
  text="hello"
/>
`;

exports[`Add bay card render tests renders the bottom sheet add card, visible, non manager option 1`] = `
<BottomSheetBaseCard
  image=""
  onPress={[Function]}
  text="hello"
/>
`;
